MAINTAINERCLEANFILES = autom4te.cache Makefile.in

noinst_HEADERS = mmc.h \
   types.h \
   port.h \
   parser.h \
   channel.h \
   factory.h \
   manager.h \
   port_request.h \
   controllable.h \
   alsa_sequencer.h \
   alsa_rawmidi.h \
   coremidi_midiport.h \
   nullmidi.h \
   fd_midiport.h \
   fifomidi.h \
   version.h
