MAINTAINERCLEANFILES = autom4te.cache Makefile.in

noinst_HEADERS = \
   abstract_ui.h \
   atomic.h \
   basename.h \
   compose.h \
   datum.h \
   dirname.h \
   ellipsoid.h \
   error.h \
   failed_constructor.h \
   fastlog.h \
   forkexec.h \
   ftw.h \
   irix_platform.h \
   linux_platform.h \
   lock_free_fifo.h \
   lockmonitor.h \
   mountpoint.h \
   pathscanner.h \
   platform_factory.h \
   platform.h \
   pool.h \
   position.h \
   precision_timer.h \
   pthread_spinlock.h \
   pthread_utils.h \
   rcpointer.h \
   receiver.h \
   relation.h \
   restartable_rw.h \
   ringbuffer.h \
   rt.h \
   rtthread.h \
   scale.h \
   selectable.h \
   solaris_platform.h \
   stl_delete.h \
   stl_functors.h \
   strsub.h \
   textreceiver.h \
   thread.h \
   thrown_error.h \
   touchable.h \
   transmitter.h \
   types.h \
   undo.h \
   unescape.h \
   version.h \
   xml++.h
